<?xml version="1.0"?>
<package format="2">
  <name>lovot_monitor</name>
  <version>0.0.0</version>
  <description>The lovot_monitor package</description>

  <maintainer email="lovotmonitor@todo.todo">lovotmonitor</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
